# bgzf-filehandle

./: .babelrc  .eslintrc  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: publish.yml  push.yml
agent-docs/adr/: 0001-decompress-into-output-buffer.md
benchmarks/: isolated.bench.ts  unzip.bench.ts  unzip.ts
crate/: Cargo.toml  build-wasm.sh  package.json  webpack.config.js  webpack.worker.config.js
crate/src/: lib.rs  worker-entry.js  wrapper.js
scripts/: build-wasm.sh  inline-worker.sh  test-bam.mjs  test-pack.sh
src/: bgzFileWithGzi.js  bgzFilehandle.d.ts  bgzFilehandle.js  bgzFilehandle.js.map  bgzFilehandle.ts  bgzfBlockScan.ts  byteCache.ts  gziIndex.js  gziIndex.ts  index.d.ts  index.js  index.js.map  index.ts  indexedBgzipFile.js  localFile.js  localFile.ts  long.ts  unzip-pako.js  unzip-pako.ts  unzip.js  unzip.ts  util.ts  workerPool.ts  workerPoolClient.ts  workerPoolHost.ts
src/wasm/: bgzf-wasm-inlined.d.ts  bgzf-wasm-inlined.js  bgzf-worker-bundle.js  bgzf-worker-inlined.js  bgzf-worker-source.ts  bgzf_wasm.d.ts  bgzf_wasm.js  bgzf_wasm_bg.js  bgzf_wasm_bg.wasm  bgzf_wasm_bg.wasm.d.ts  index.ts  loadWasm.ts
test/: gzi.test.js  gzi.test.ts  indexedfile.test.js  indexedfile.test.ts  no-stat.test.ts  unzip.test.js  unzip.test.ts  workerPool.test.ts  workerPoolFallback.test.ts
test/__snapshots__/: unzip.test.js.snap  unzip.test.ts.snap
test/browser/: index.html  messageport-test.html  parallel.test.ts  serve.ts  (+1 more)
(+1 files in other folders)
