[package]
name = "bgzf-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM-based BGZF decompression with byte tracking"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[profile.release]
opt-level = 3
lto = true
